replaced non-ASCII apostrophes

--- a/liner/liner.tex
+++ b/liner/liner.tex
@@ -51,21 +51,21 @@ a song that illustrates how binary counting is inherently musical to our ears. i
 
 Nystrom said introducing the decimal system into music would sound bad, and Lucilla took that personally: this song illustrates what music might sound like if rhythm was decimal. it counts from 0 to 1000 in ten verses, each of ten bars, each of ten notes, at 100 beats per minute. and it actually seems to have turned out pretty good, which ironically makes the point weaker, technically..?
 
-at the very end, there’s a {\sc g} major chord that fades into something strange. it’s the nearest 10edo analogue of a {\sc g} major chord, the quantization of those notes to a system of \emph{ten} notes per octave instead of twelve, giving a glimpse of what it would be like if \emph{pitch} became decimalized too. (though remember that $n$-edo is really just powers of $2^{1/n}$, so it’s really just binary all over again...)
+at the very end, there's a {\sc g} major chord that fades into something strange. it's the nearest 10edo analogue of a {\sc g} major chord, the quantization of those notes to a system of \emph{ten} notes per octave instead of twelve, giving a glimpse of what it would be like if \emph{pitch} became decimalized too. (though remember that $n$-edo is really just powers of $2^{1/n}$, so it's really just binary all over again...)
 
 \mysectionl{bach binary}{
 	key: C -- tuning: 12edo* -- plays in: chapter 7
 }
 
-this track is a binary take on Bach’s famous {\it Prelude in C Major}, BWV \jo\io\jz\jo\jz\iz\jo\jo\jo\iz. almost the entire prelude simply consists of chords, so it's possible to rearrange the notes so that every bar is a 4-bit binary counter. the number of bars that have this pattern happens to itself be a power of two ($2^5$), making the entire piece a 9-bit binary counter.
+this track is a binary take on Bach's famous {\it Prelude in C Major}, BWV \jo\io\jz\jo\jz\iz\jo\jo\jo\iz. almost the entire prelude simply consists of chords, so it's possible to rearrange the notes so that every bar is a 4-bit binary counter. the number of bars that have this pattern happens to itself be a power of two ($2^5$), making the entire piece a 9-bit binary counter.
 
-the melody in the first half of the piece comes from Charles Gounod's {\it Ave Maria}, while in the second half it just does its own thing. the ending is a reference to P.~D.~Q.~Bach’s {\it Short-Tempered Clavier}, with some slightly pitch-bent blue notes.
+the melody in the first half of the piece comes from Charles Gounod's {\it Ave Maria}, while in the second half it just does its own thing. the ending is a reference to P.~D.~Q.~Bach's {\it Short-Tempered Clavier}, with some slightly pitch-bent blue notes.
 
 \mysectionr{divide and conquer}{
 	key: D -- tuning: JI -- plays in: chapters 4 \& 5
 }
 
-this short track, the only one in a minorish key, accompanies what at first glance appear to be the failures of binary. it’s inspired by Arvo P\"art’s {\it Fratres}, and is written using its characteristic ``tintinnabuli'' style over the gamelan-like pentatonic scale {\sc d}, {\sc e}, {\sc f}, {\sc a}, and {\sc b}-flat, where the middle voice only uses the notes of a minor triad: {\sc d}, {\sc f}, and {\sc a}.
+this short track, the only one in a minorish key, accompanies what at first glance appear to be the failures of binary. it's inspired by Arvo P\"art's {\it Fratres}, and is written using its characteristic ``tintinnabuli'' style over the gamelan-like pentatonic scale {\sc d}, {\sc e}, {\sc f}, {\sc a}, and {\sc b}-flat, where the middle voice only uses the notes of a minor triad: {\sc d}, {\sc f}, and {\sc a}.
 
 in accordance with the track's role in the video essay, the animation accompanying it in the music video is a series of scrolling lengths of fractions in seximal and binary, marking the line in red whenever its length corresponds to a cyclic number. this is the argument that {\it seximal responses} presents to dispel binary -- and this is the argument we must deconstruct.
 
@@ -75,7 +75,7 @@ the name of this track is an elusive pun. ``divide and conquer'' is an idiom, bu
 	key: D -- tuning: JI -- plays in: chapter 1
 }
 
-alludes to Adam Neely’s idea that ``polyrhythms are polypitch''. indeed, chords are just really fast polyrhythms, and here, every chord is also simultaneously its corresponding polyrhythm: each note's pitch frequency is also its rhythmic frequency, and in the animation, also the length of its corresponding line. the last measure features the raw polyrhythm corresponding to a major triad, $4:5:6$.
+alludes to Adam Neely's idea that ``polyrhythms are polypitch''. indeed, chords are just really fast polyrhythms, and here, every chord is also simultaneously its corresponding polyrhythm: each note's pitch frequency is also its rhythmic frequency, and in the animation, also the length of its corresponding line. the last measure features the raw polyrhythm corresponding to a major triad, $4:5:6$.
 
 \mysectionr{dance of the symbols}{
 	key: D -- tuning: 12edo -- plays in: chapter 6
@@ -87,13 +87,13 @@ a short neo-Romantic piano piece, in the style of a folk dance in triple meter. 
 	key: C -- tuning: JI -- plays in: introduction, chapters 4 \& 5
 }
 
-the ``title theme'' of this video essay, this is the response to Misali’s {\it seximal fractions}: a track based on turning binary fractions from $1/2$ to $1/32$ into music. at first glance this might seem impossible, since unlike in seximal, binary fractions only have two possible digits, so there’d be no melodies. but you simply have to think outside the box a little and use the magic sequences \emph{themselves} as the basis instead. this actually ends up making it easier to convert the numbers into pitches: you don’t need to pick any arbitrary scale, you just choose a fundamental frequency ({\sc c$_2$} in this case) and every number $n$ is simply represented by the note $n$ times that frequency. and it sounds good too, ...at least as long as it doesn’t get too microtonal (though at that point, beyond 16, the melody gets some extra harmonization to make it more credible to the musically gullible).
+the ``title theme'' of this video essay, this is the response to Misali's {\it seximal fractions}: a track based on turning binary fractions from $1/2$ to $1/32$ into music. at first glance this might seem impossible, since unlike in seximal, binary fractions only have two possible digits, so there'd be no melodies. but you simply have to think outside the box a little and use the magic sequences \emph{themselves} as the basis instead. this actually ends up making it easier to convert the numbers into pitches: you don't need to pick any arbitrary scale, you just choose a fundamental frequency ({\sc c$_2$} in this case) and every number $n$ is simply represented by the note $n$ times that frequency. and it sounds good too, ...at least as long as it doesn't get too microtonal (though at that point, beyond 16, the melody gets some extra harmonization to make it more credible to the musically gullible).
 
 but apart from that, this mapping has several benefits: \bigskip
 
 \begin{itemize}
-	\item using silence for 0 actually makes sense here, since a sound of frequency zero is silence -- unlike in {\it seximal fractions}, where it’s an exception, and following the rule strictly would lead to 0 becoming the {\sc b} below middle {\sc c}: an off-by-one error.
-	\item since the start and end points of a magic sequence’s period are unambiguously determined by its entries (if it ends in a note that has already occurred before, then it loops at that note; if it ends with no duplicates, then all remaining entries are 0), repetition is optional and can be used freely for musical effect, as in the case of 11 and 13 -- unlike in {\it seximal fractions}, where an arbitrarily chosen number of repetitions is required to encode the message that the pattern repeats forever, possibly with ambiguity.
+	\item using silence for 0 actually makes sense here, since a sound of frequency zero is silence -- unlike in {\it seximal fractions}, where it's an exception, and following the rule strictly would lead to 0 becoming the {\sc b} below middle {\sc c}: an off-by-one error.
+	\item since the start and end points of a magic sequence's period are unambiguously determined by its entries (if it ends in a note that has already occurred before, then it loops at that note; if it ends with no duplicates, then all remaining entries are 0), repetition is optional and can be used freely for musical effect, as in the case of 11 and 13 -- unlike in {\it seximal fractions}, where an arbitrarily chosen number of repetitions is required to encode the message that the pattern repeats forever, possibly with ambiguity.
 	\item binary magic sequences always start with powers of two, and contain many instances of doublings. but doubling a frequency means raising a note by an octave, so this is transparently audible in the music as sequences of rising octaves. due to octave equivalence, the magic sequences for $n$ and $2n$ sound almost exactly the same.
 	\item the choices for the pitches are, in a way, more natural than pitches that come from an arbitrary scale that sounds good ``by design'', like the major scale. this alludes to how binary is more natural in a way than any other base, including those that work good ``by design'', like seximal.
 \end{itemize}
